--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@ body {
     min-height: 100vh;
     padding: 0 20px;
     margin: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+#header {
+    display: flex;
+    justify-content: space-between;
+    color: #888;
 }
 
 #container {
@@ -22,7 +29,6 @@ body {
 
 #text {
     font-size: 1.5em;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 #button {
